commit d'avant deadline

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -2,13 +2,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     tools:context=".MainActivity" >
 
-    <TextView
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/buttonListMaintenances"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/hello_world" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="100dp"
+        android:text="@string/buttonListeMaintenances"
+        android:textColor="@color/black" />
+
+    <Button
+        android:id="@+id/buttonQuitter"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/buttonListMaintenances"
+        android:layout_marginTop="20dp"
+        android:text="@string/buttonQuitter"
+        android:textColor="@color/black" />
 
 </RelativeLayout>
